# formula-tree

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml  linux.yml
cmake/: ExternalCatch2.cmake
examples/: formula-tree-2.cpp  formula-tree-3.cpp  leaf-configs-2.cpp  leaf-configs.cpp  nnf-2.cpp  nnf-3.cpp  propositional-formula.cpp  sample-formula.cpp  substitute-2.cpp
include/formula-tree/: formula-tree.h
include/formula_tree/: formula_tree.h
src/: FormulaLexer.g4  FormulaParser.g4  FormulaTree.g4  FormulaTree.interp  FormulaTree.tokens  FormulaTreeBaseListener.cpp  FormulaTreeBaseListener.h  FormulaTreeLexer.cpp  FormulaTreeLexer.h  FormulaTreeLexer.interp  FormulaTreeListener.cpp  FormulaTreeListener.h  FormulaTreeParser.cpp  FormulaTreeParser.h  FormulaVisitor.cpp  FormulaVisitor.h  formula-tree.cpp  formula_tree.cpp
tests/: CMakeLists.txt  test-formula-tree-2.cpp  test-formula-tree-3.cpp  test-formula-tree.cpp  test-leaf-configs.cpp  test-nnf-2.cpp  test-nnf-3.cpp  test-nnf.cpp  test-performance.cpp  test-pseudo-boolean-formula.cpp  test-sample-formula.cpp  test-substitute.cpp
